--- a/src/components/JournalBox.css
+++ b/src/components/JournalBox.css
@@ -9,14 +9,14 @@
   border: none;
   -webkit-border-radius: 32px / 54px;
   border-radius: 32px / 54px;
-  font: normal 18px/normal "coda", Helvetica, sans-serif;
-  color: rgba(90,90,90,1);
+  font: normal 18px/normal 'coda', Helvetica, sans-serif;
+  color: rgba(90, 90, 90, 1);
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
-  background: rgba(252,252,252,1);
-  -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
-  text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
+  background: rgba(252, 252, 252, 1);
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2) inset;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2) inset;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.66);
   -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
   -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
   -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
@@ -25,10 +25,10 @@
 }
 
 .JournalBox:hover {
-  font: normal 18px/normal "Coda", Helvetica, sans-serif;
-  background: rgba(255,253,232,1);
-  -webkit-box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
-  box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
+  font: normal 18px/normal 'Coda', Helvetica, sans-serif;
+  background: rgba(255, 253, 232, 1);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(90, 90, 90, 0.2) inset;
+  box-shadow: 0 2px 2px 0 rgba(90, 90, 90, 0.2) inset;
 }
 
 .JournalBox:focus {
