--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -4,7 +4,7 @@
   padding: 10px 60px;
   text-decoration: none;
   font-size: 1em;
-  margin: 0 15px;
+  margin: 10px 15px;
   border: none;
 
   display: inline-block;
