Make journal entry box responsive

--- a/src/components/JournalBox.css
+++ b/src/components/JournalBox.css
@@ -3,12 +3,14 @@
   class="support css-property">-webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  width: 600px;
-  height: 200px;
-  padding: 20px 30px;
+  max-width: 600px;
+  max-height: 300px;
+  width: 70vw;
+  height: 20vh;
+  padding: 16px 20px;
   border: none;
-  -webkit-border-radius: 32px / 54px;
-  border-radius: 32px / 54px;
+  -webkit-border-radius: 4vw / 4vh;
+  border-radius: 4vw / 4vh;
   font: normal 18px/normal 'coda', Helvetica, sans-serif;
   color: rgba(90, 90, 90, 1);
   -o-text-overflow: ellipsis;
