--- a/src/components/HistoryEntryDate.css
+++ b/src/components/HistoryEntryDate.css
@@ -3,6 +3,7 @@
 .HistoryEntryDate {
   font: 1.3em 'Press start 2P';
   font-weight: 700;
+  line-height: 1.6;
   text-align: center;
   margin: 10px 0px 0px 0px;
 }
