--- a/src/components/HeaderTitle.css
+++ b/src/components/HeaderTitle.css
@@ -22,7 +22,7 @@
   }
   .spaghetti-img {
     width: 40px !important;
-    height: 40px !important;
+    /* height: 40px !important; */
   }
 }
 
@@ -34,6 +34,6 @@
   }
   .spaghetti-img {
     width: 25px !important;
-    height: 25px !important;
+    /* height: 25px !important; */
   }
 }
