D_Basic User Sign Up Page (#7)

--- a/front-end/src/components/JournalBox.css
+++ b/front-end/src/components/JournalBox.css
@@ -55,7 +55,7 @@
     font: normal 12px/normal 'Coda', Helvetica, sans-serif;
   }
   .SubmitButton {
-    font: normal 14px/27px 'coda', Helvetica, sans-serif !important;
+    font: normal 20px/20px 'VT323', Helvetica, sans-serif !important;
     width: 80px !important;
     height: 25px !important;
   }
