--- a/front-end/src/components/SignUpButton.css
+++ b/front-end/src/components/SignUpButton.css
@@ -1,21 +1,18 @@
-.SubmitButton {
+.SignUpButton {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  width: 100px;
-  height: 30px;
   cursor: pointer;
   margin: 0 auto;
+  padding-top: 5px;
+  padding-bottom: 5px;
   border: 2px solid rgba(255, 157, 0, 1);
-  -webkit-border-radius: 40px;
   border-radius: 10px;
-  font: normal 28px/1 'VT323', Helvetica, sans-serif;
+  font: normal 20px/1 'VT323', Helvetica, sans-serif;
   color: rgba(255, 255, 255, 1);
   text-align: center;
-  -o-text-overflow: clip;
-  text-overflow: clip;
   letter-spacing: 1px;
-  background: rgb(204, 51, 0);
+  background: rgb(102, 34, 0);
   -webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0),
     color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
     border-width 0.3s cubic-bezier(0, 0, 0, 0),
@@ -35,9 +32,9 @@
   outline: none !important;
 }
 
-.SubmitButton:hover {
+.SignUpButton:hover {
   color: rgba(255, 255, 255, 1);
-  background: rgb(153, 38, 0);
+  background: rgb(77, 26, 0);
 }
 
 .SubmitButton:active {
@@ -45,4 +42,16 @@
   -moz-transition: none;
   -o-transition: none;
   transition: none;
+}
+
+@media screen and (max-width: 890px) {
+  .SignUpButton {
+    font: normal 20px/1 'VT323', Helvetica, sans-serif;
+  }
+}
+
+@media screen and (max-width: 462px) {
+  .SignUpButton {
+    font: normal 15px/1 'VT323', Helvetica, sans-serif;
+  }
 }
