--- a/front-end/src/components/DynamicCheckMark.css
+++ b/front-end/src/components/DynamicCheckMark.css
@@ -7,7 +7,7 @@
   pointer-events: none;
 }
 .colorful-switch:before {
-  content: "";
+  content: '';
   z-index: -1;
   position: absolute;
   left: -5px;
@@ -44,15 +44,25 @@
   top: 0;
   width: 180px;
   height: 100%;
-  background: linear-gradient(90deg, #14dcd6 0, #10e7bd 60px, #ef9c29 120px, #e76339 100%);
+  background: linear-gradient(
+    90deg,
+    #14dcd6 0,
+    #10e7bd 60px,
+    #ef9c29 120px,
+    #e76339 100%
+  );
   transition: transform 0.5s;
   transform: translate3d(-120px, 0, 0);
 }
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__bg {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__bg {
   transform: translate3d(0, 0, 0);
 }
 
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__dot {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__dot {
   transform: translate3d(-26.78571px, 0, 0);
 }
 .colorful-switch__on {
@@ -64,7 +74,9 @@
   transition: transform 0.5s;
   transform: translate3d(0, 0, 0);
 }
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__on {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__on {
   transform: translate3d(-26.78571px, 0, 0);
 }
 .colorful-switch__on__inner {
@@ -75,12 +87,15 @@
   transform-origin: 100% 50%;
   transform: rotate(45deg) scale(0) translateZ(0);
 }
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__on__inner {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__on__inner {
   transition: transform 0.25s 0.25s cubic-bezier(0.67, -0.16, 0.47, 1.61);
   transform: rotate(45deg) scale(1) translateZ(0);
 }
-.colorful-switch__on__inner:before, .colorful-switch__on__inner:after {
-  content: "";
+.colorful-switch__on__inner:before,
+.colorful-switch__on__inner:after {
+  content: '';
   position: absolute;
   border-radius: 0.85714px;
   background: #fff;
@@ -108,11 +123,14 @@
   transition: transform 0.5s;
   transform: translate3d(0, 0, 0);
 }
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__off {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__off {
   transform: translate3d(-26.78571px, 0, 0);
 }
-.colorful-switch__off:before, .colorful-switch__off:after {
-  content: "";
+.colorful-switch__off:before,
+.colorful-switch__off:after {
+  content: '';
   position: absolute;
   left: 0;
   top: 50%;
@@ -123,20 +141,29 @@
   background: #fff;
   transition: transform 0.25s 0.25s;
 }
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__off:before, .colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__off:after {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__off:before,
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__off:after {
   transition-delay: 0s;
 }
 .colorful-switch__off:before {
   transform: rotate(45deg) scaleX(1) translateZ(0);
 }
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__off:before {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__off:before {
   transform: rotate(45deg) scaleX(0) translateZ(0);
 }
 .colorful-switch__off:after {
   transition-timing-function: cubic-bezier(0.67, -0.16, 0.47, 1.61);
   transform: rotate(-45deg) scaleX(1) translateZ(0);
 }
-.colorful-switch__checkbox:checked ~ .colorful-switch__label .colorful-switch__off:after {
+.colorful-switch__checkbox:checked
+  ~ .colorful-switch__label
+  .colorful-switch__off:after {
   transition-timing-function: ease;
   transform: rotate(-45deg) scaleX(0) translateZ(0);
 }
