--- a/front-end/src/components/SignUpView.css
+++ b/front-end/src/components/SignUpView.css
@@ -1,4 +1,4 @@
-.SignUpFieldsVerticalLayoutStyle  {
+.SignUpFieldsVerticalLayoutStyle {
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -63,8 +63,8 @@
     0 3px 0 3px black, 3px 0 0 3px black, -3px 0 0 3px black;
   box-shadow: 3px 0 white, -3px 0 white, 0 -3px white, 0 3px white, 6px 0 white,
     -6px 0 white, 0 -6px white, 0 6px white, 0 0 0 3px white, 9px 0 black,
-    -9px 0 black, 0 9px black, 0 -9px black, 0 -3px 0 3px black, 0 3px 0 3px black,
-    3px 0 0 3px black, -3px 0 0 3px black;
+    -9px 0 black, 0 9px black, 0 -9px black, 0 -3px 0 3px black,
+    0 3px 0 3px black, 3px 0 0 3px black, -3px 0 0 3px black;
   margin: 1em 0em 3em 0em;
   padding: 0em 0.6em;
   font: 0.7em 'Press start 2P';
@@ -78,7 +78,6 @@
   display: inline-block;
   background: white;
   word-wrap: break-word;
-
 }
 
 .SignUpAlertBoxText {
